deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: electera-api
spec:
  selector:
    app: electera-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
